Fix drop-downs z-index

--- a/styles/_drop-down.scss
+++ b/styles/_drop-down.scss
@@ -1,6 +1,6 @@
 .drop-down-wrapper {
     position: absolute;
-    z-index: 90000;
+    z-index: 10000;
 }
 
 .drop-down {
@@ -9,6 +9,7 @@
     max-width: 80vw;
     overflow: auto;
     position: absolute;
+    z-index: 10001;
     background: $COLOR_BG;
     box-shadow: 0 0 1em 0 rgba(black, 0.5);
     border-radius: $BORDER_RADIUS;
